--- a/css/必答题-首页.css
+++ b/css/必答题-首页.css
@@ -40,17 +40,14 @@ html, body {
 
 .start-button {
     position: absolute;
-    left: 31.7%; /* 按照图片宽度31.7%定位 */
-    top: 67.4%;  /* 按照图片高度67.4%定位 */
-    width: 27.4%; /* 按照图片宽度设置按钮宽度 */
-    height: 12.7%; /* 按照图片高度设置按钮高度 */
-    
-    background-image: url('/assets/image/一站到底首页按钮图.png'); /* 设置按钮背景图片 */
+    left: 35.6%; 
+    top: 20.2%; 
+    width: 29%;
+    height: 14.4%;
     background-color: rgba(255, 255, 255, 0); /* 悬停时保持透明 */
     background-size: cover; /* 确保图片覆盖整个按钮区域 */
     background-repeat: no-repeat;
     background-position: center;
-
     border: none;
     cursor: pointer;
 }
@@ -71,7 +68,7 @@ html, body {
 
 /* 链接样式覆盖 */
 .bottom-links a {
-    color: #507aa5;  /* 设置字体颜色为 #9c1f14 */
+    color: #9c1f14;  /* 设置字体颜色为 #9c1f14 */
     text-decoration: none;  /* 去掉下划线 */
 }
 
