--- a/css/一站到底-选题页.css
+++ b/css/一站到底-选题页.css
@@ -129,3 +129,42 @@ html, body {
 .hidden {
     display: none;
 }
+
+/* 位置调整 */
+.bottom-links {
+    position: absolute;
+    left: 2%;
+    bottom: 2%;
+    font-size: 1vw;
+    font-family: 'Source Han Sans', sans-serif;
+    font-weight: 100;
+}
+
+/* 链接样式覆盖 */
+.bottom-links a {
+    color: #507aa5;  /* 设置字体颜色为 #9c1f14 */
+    text-decoration: none;  /* 去掉下划线 */
+}
+
+.bottom-links a:hover {
+    text-decoration: underline;  /* 鼠标悬停时可以选择显示下划线 */
+}
+
+.next2-links {
+    position: absolute;
+    right: 3%;
+    bottom: 2%;
+    font-size: 2vw;
+    font-family: 'Source Han Sans', sans-serif;
+    font-weight: 800;
+}
+
+/* 链接样式覆盖 */
+.next2-links a {
+    color: #ffffff;  /* 设置字体颜色为 #9c1f14 */
+    text-decoration: none;  /* 去掉下划线 */
+}
+
+.next2-links a:hover {
+    text-decoration: underline;  /* 鼠标悬停时可以选择显示下划线 */
+}
