--- a/css/一战到底-选题页.css
+++ b/css/一战到底-选题页.css
@@ -54,61 +54,61 @@ html, body {
 .button-1 {
     left: 10.7%;
     top: 31.1%;
-    background-image: url('/assets/image/一站到底选题页按钮1.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮1.webp'); /* 设置按钮背景图片 */
 }
 
 .button-2 {
     left: 23.4%;
     top: 31.1%;
-    background-image: url('/assets/image/一站到底选题页按钮2.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮2.webp'); /* 设置按钮背景图片 */
 }
 
 .button-3 {
     left: 36.2%;
     top: 31.1%;
-    background-image: url('/assets/image/一站到底选题页按钮3.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮3.webp'); /* 设置按钮背景图片 */
 }
 
 .button-4 {
     left: 48.9%;
     top: 31.1%;
-    background-image: url('/assets/image/一站到底选题页按钮4.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮4.webp'); /* 设置按钮背景图片 */
 }
 
 .button-5 {
     left: 61.6%;
     top: 31.1%;
-    background-image: url('/assets/image/一站到底选题页按钮5.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮5.webp'); /* 设置按钮背景图片 */
 }
 
 .button-6 {
     left: 10.7%;
     top: 49.2%;
-    background-image: url('/assets/image/一站到底选题页按钮6.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮6.webp'); /* 设置按钮背景图片 */
 }
 
 .button-7 {
     left: 23.4%;
     top: 49.2%;
-    background-image: url('/assets/image/一站到底选题页按钮7.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮7.webp'); /* 设置按钮背景图片 */
 }
 
 .button-8 {
     left: 36.2%;
     top: 49.2%;
-    background-image: url('/assets/image/一站到底选题页按钮8.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮8.webp'); /* 设置按钮背景图片 */
 }
 
 .button-9 {
     left: 48.9%;
     top: 49.2%;
-    background-image: url('/assets/image/一站到底选题页按钮9.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮9.webp'); /* 设置按钮背景图片 */
 }
 
 .button-10 {
     left: 61.6%;
     top: 49.2%;
-    background-image: url('/assets/image/一站到底选题页按钮10.webp'); /* 设置按钮背景图片 */
+    background-image: url('/assets/image/一战到底选题页按钮10.webp'); /* 设置按钮背景图片 */
 }
 
 /* 额外按钮样式 */
